--- a/app/templates/components/layouts/app-sidebar.html
+++ b/app/templates/components/layouts/app-sidebar.html
@@ -457,7 +457,7 @@
 							<img src="{% static 'assets/images/icons/farme.png' %}" class="side-menu__icon" enable-background="new 0 0 24 24" viewBox="0 0 24 24" {% comment %} style="margin-right: 10px; width: 10%;filter: contrast(20%);" {% endcomment %}/>
 							<span class="side-menu__label">Opérations Agricoles</span><i class="angle fa fa-angle-right"></i></a>
 							<ul class="slide-menu">
-								<li class="sub-side-menu-label1"><a href="recommendations-ia">Recommandations IA</a></li>
+								<li ><a href="recommendations-ia">Recommandations IA</a></li>
 								<li class="sub-side-menu-label1"><a href="operations-utilisateur">Opérations utilisateur</a></li>
 							</ul>
 					</li>		
